--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,17 +11,23 @@
   </div>
 </div>
 
-<input hidden id="currentPage" value="0">
+<div class="container">
+  <input hidden id="currentPage" value="0">
+  <nav aria-label="..." style="text-align: center;">
+    <ul class="pagination pagination-lg">
+      <li class="page-item "><a class="page-link" href="">1</a></li>
+      <li class="page-item"><a class="page-link" href="">2</a></li>
+      <li class="page-item"><a class="page-link" href="">3</a></li>
+      <li class="page-item"><a class="page-link" href="">...</a></li>
+    </ul>
+  </nav>
+</div>
 
-<nav aria-label="...">
-  <ul class="pagination pagination-lg">
-    <li class="page-item ">
-      <a class="page-link" href="#" >1</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-  </ul>
-</nav>
+
+
+
+
+
 
 <div class="panel panel-default">
   <span id="message"></span>
