--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,47 +1,20 @@
 
 </body>
 <footer>
-  <div id="bsr-page-footer">        
-      <div class="row">
-          <!-- brand bar -->
-          <div class="col-xs-6 text-left">
-            <a href="/"><img src="/images/logo1.png" style="height: auto; width: 100px;"></a>
-          </div>
-          <!-- social icons -->
-          <div class="col-xs-6 text-right">
-            <ul class="bsr-social-icons">
-              <li><a href="#"><i class="fa fa-fw fa-lg fa-github-alt" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-fw fa-lg fa-linkedin" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-fw fa-lg fa-instagram" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-fw fa-lg fa-facebook-official" aria-hidden="true"></i></a></li>
-            </ul>
-          </div>
-        </div>
-        <hr>
-      
-        <div class="row">
-          <!-- copyright bar -->
-          <div class="col-xs-5">
-            <p><small>Copyright © 2023</small></p>
-          </div>
-          <!-- ancillary links bar -->
-          <div class="col-xs-7">
-            <ul class="bsr-footer-ancillary-links text-right">
-              <li><a href="/">Home</a></li>
-              <li><a href="/user">User</a></li>
-              <li><a href="/money">Money</a></li>
-              <li><a href="/cart">Cart</a></li>
-            </ul>
-          </div>
-        </div>
-      </>
-    
+  <div class="navbar navbar-default navbar-bottom">
+    <div class="container-fluid">
+      <div class="navbar-header" style="justify-content: center;">
+      </div>
 
-    
-        <!-- Favicons -->
-    <script
-        src="https://kit.fontawesome.com/147e879dd5.js"
-        crossorigin="anonymous"
-    ></script>
+      <div id="navbar" class="navbar">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/user">User</a></li>
+          <li><a href="/money">Money</a></li>
+          <li><a href="/cart">Cart</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
 </html>
