--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,54 @@
 body {
-  padding-top: 50px;
-  background-color: #B8F170
-  ;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #B8F170;
+  
 }
+
+@media (max-width: 767px) {
+  body {
+    padding-top: 50px;
+    padding-bottom: 0px;
+  }
+
+  footer {
+    display: none;
+  }
+
+}
+
 
 footer {
   background-color: whitesmoke;
-
-  width: auto;
-  height: 200px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f8f8; /* Set a background color for the footer */
 }
 
+
 .smallmlm{
-  background-color: white; width: 500px; height: 350px; margin: auto; align-items: center; border-radius: 100px; border-color: black;
+  background-color: white;  border-radius: 100px; border-color: black;
+  max-width: 500px; max-height: 350px;
+  min-width: 300px;
+  margin: auto;
+  margin-bottom: 20px;
+  padding: 25px;
+  border: 1.5px solid black
 }
 
 .mlmcontainer{
-  background-color: white; border: 100px; border-radius: 25px; padding: 25px; border-color: black
+  background-color: white; border-radius: 25px;  border-color: black;
+  overflow: auto;
+  margin: auto;
+  margin-bottom: 20px;
+  padding: 25px;
+  border: 1.5px solid black
+}
+
+.mlmrow{
+  text-align: center; min-width: 670px;              
 }
 
 
@@ -50,7 +81,10 @@ footer {
   flex-wrap: nowrap;
 }
 
+
 .navbar {
+  display: flex;
+  align-items: center;
   background-color: whitesmoke;
 }
 
