--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,11 +23,8 @@
     />
 
     <!-- Custom styles for this template -->
-    <link
-      href="/css/style.css"
-      rel="stylesheet"
-    />
-    
+    <link href="/css/style.css" rel="stylesheet" />
+
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
@@ -36,9 +33,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tomorrow&display=swap" rel="stylesheet">
+    <!-- Favicons -->
+    <script
+      src="https://kit.fontawesome.com/147e879dd5.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tomorrow&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -46,7 +52,7 @@
       <div class="container">
         <nav class="navbar navbar-default navbar-fixed-top">
           <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="navbar-header" style="justify-content: center">
               <button
                 type="button"
                 class="navbar-toggle collapsed"
@@ -60,33 +66,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a href="/"><img src="/images/logo1.png" style="height: auto; width: 100px; padding-left: 15px;"></a>
+              <a href="/">
+                <img
+                  src="/images/logo1.png"
+                  style="height: auto; width: 100px; padding-left: 15px"
+                />
+              </a>
             </div>
 
-            <div id="navbar" class="navbar-collapse collapse">
+            <div id="navbar" class="navbar-collapse collapse navbar-center">
               <ul class="nav navbar-nav navbar-right">
-                <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
                 <li>
                   <a href="/"
-                    ><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only"></span
+                    ><span
+                      class="glyphicon glyphicon-home"
+                      aria-hidden="true"
+                    ></span>
+                    Home <span class="sr-only"></span
                   ></a>
                 </li>
-                <%if(user){%>
-                  <%if(user.isAdmin){%>
-                    <%-include("adminbar.ejs")-%>
-                  <%}else{%>
-                    <%-include("userbar.ejs", {wallet: wallet})-%>
-                  <%}%>
-
-                <%}else{%>
-                  <%-include("nonuserbar.ejs")-%>
-                <%}%>
+                <%if(user){%> <%if(user.isAdmin){%>
+                <%-include("adminbar.ejs")-%> <%}else{%>
+                <%-include("userbar.ejs", {wallet: wallet})-%> <%}%> <%}else{%>
+                <%-include("nonuserbar.ejs")-%> <%}%>
               </ul>
             </div>
           </div>
         </nav>
-        
       </div>
       <!-- Fixed navbar -->
     </form>
-    
+  </body>
+</html>
