--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
 body {
   padding-top: 100px;
   padding-bottom: 100px;
-  background-color: #B8F170;
-  
+  background-color: #b8f170;
 }
 
 @media (max-width: 767px) {
@@ -14,9 +13,7 @@ body {
   footer {
     display: none;
   }
-
 }
-
 
 footer {
   background-color: whitesmoke;
@@ -27,42 +24,57 @@ footer {
   background-color: #f8f8f8; /* Set a background color for the footer */
 }
 
+.dashboarditems {
+  width: 200px;
+  height: auto;
+  text-align: center;
+  background-color: #1c3f1c;
+  border: 1.5px solid black;
+  border-radius: 25px;
+  padding: 10px;
+  margin-bottom: 25px;
+}
 
-.smallmlm{
-  background-color: white;  border-radius: 100px; border-color: black;
-  max-width: 500px; max-height: 350px;
+.smallmlm {
+  background-color: white;
+  border-radius: 100px;
+  border-color: black;
+  max-width: 500px;
+  max-height: 350px;
   min-width: 300px;
   margin: auto;
   margin-bottom: 20px;
   padding: 25px;
-  border: 1.5px solid black
+  border: 1.5px solid black;
 }
 
-.mlmcontainer{
-  background-color: white; border-radius: 25px;  border-color: black;
+.mlmcontainer {
+  background-color: white;
+  border-radius: 25px;
+  border-color: black;
   overflow: auto;
   margin: auto;
   margin-bottom: 20px;
   padding: 25px;
-  border: 1.5px solid black
+  border: 1.5px solid black;
 }
 
-.mlmrow{
-  text-align: center; min-width: 670px;              
+.mlmrow {
+  text-align: center;
+  min-width: 670px;
 }
 
-
-.panel-label{
-  color: black; text-align: center;
+.panel-label {
+  color: black;
+  text-align: center;
 }
-.commissionbox{
-  font-family: 'Tomorrow', sans-serif;
+.commissionbox {
+  font-family: "Tomorrow", sans-serif;
   font-size: 25px;
   font-weight: 400;
   line-height: 18.1px;
 
-
-  margin:auto;
+  margin: auto;
   background-color: white;
   color: red;
   text-align: center;
@@ -81,22 +93,20 @@ footer {
   flex-wrap: nowrap;
 }
 
-
 .navbar {
   display: flex;
   align-items: center;
   background-color: whitesmoke;
 }
 
-.daybox{
-  font-family: 'Roboto', sans-serif;
+.daybox {
+  font-family: "Roboto", sans-serif;
   font-size: 25px;
   font-weight: 400;
   line-height: 18.1px;
 
-
-  margin:auto;
-  background-color: #1C3F1C;
+  margin: auto;
+  background-color: #1c3f1c;
   color: white;
   text-align: center;
 
