--- a/views/partials/adminbar.ejs
+++ b/views/partials/adminbar.ejs
@@ -1,6 +1,6 @@
 <li>
     <a href="/admin"
-      ><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Data <span class="sr-only"></span
+      ><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Tools <span class="sr-only"></span
     ></a>
   </li>
   <li>
