new calculation system

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -37,7 +37,7 @@
       <div class="panel panel-default commissionbox">
         <div class="panel-body">
           <%if(!emptySlot){%>
-          <div style="color: red">ผังเต็มแล้ว!</div>
+          <a href="/"><div style="color: red">ผังเต็มแล้ว!</div></a>
           <%}else{%> <%=emptySlot%> คน <%}%>
         </div>
       </div>
