--- a/views/admintools/userdata.ejs
+++ b/views/admintools/userdata.ejs
@@ -1,10 +1,9 @@
-<a href="/admin/userdata" style="text-decoration: none; color: black;">
+<a href="/admin/<%=link%>" style="text-decoration: none; color: black;">
     <div class="col-md-4 col-sm-6 col-12">
       <div class="container dashboarditems">
-        <i class="fa fa-table fa-10x" aria-hidden="true" style="color: white;"></i>
-        <h4 style="color: white; font-family: 'Tomorrow', sans-serif;">Users Data</h4>
+        <i class="fa <%=icon%>" aria-hidden="true" style="color: #1c3f1c;"></i>
+        <h4 style="color: #1c3f1c; font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
       </div>
-      </div>
-
+    </div>
 </a>
 
