--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,30 +15,38 @@ body {
   }
 
   .dashboard{
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-left: 25px;
+    margin-right: 25px;
     margin-bottom: 25px;
   }
 }
 
-footer {
+footer,.dashboard,.navbar {
   background-color: whitesmoke;
+}
+
+.dashboarditems,.smallmlm,.mlmcontainer,.commissionbox{
+  background-color: white;
+}
+
+.icon,.font{
+  color: #1c3f1c;
+}
+
+footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #f8f8f8; /* Set a background color for the footer */
 }
 
 .dashboard{
-  background-color: whitesmoke;
   border-radius: 25px;
   padding: 25px;
   border: 1.5px solid black;
 }
 
 .dashboarditems {
-  background-color: white;
   border-radius: 25px;
   padding: 25px;
   margin: auto;
@@ -50,7 +58,6 @@ footer {
 }
 
 .smallmlm {
-  background-color: white;
   border-radius: 100px;
   border-color: black;
   max-width: 500px;
@@ -63,7 +70,6 @@ footer {
 }
 
 .mlmcontainer {
-  background-color: white;
   border-radius: 25px;
   border-color: black;
   overflow: auto;
@@ -71,6 +77,7 @@ footer {
   margin-bottom: 20px;
   padding: 25px;
   border: 1.5px solid black;
+  margin-top: 25px;
 }
 
 .mlmrow {
@@ -89,7 +96,7 @@ footer {
   line-height: 18.1px;
 
   margin: auto;
-  background-color: white;
+
   color: red;
   text-align: center;
 
@@ -102,15 +109,10 @@ footer {
   justify-content: center;
 }
 
-.flex-container {
-  display: flex;
-  flex-wrap: nowrap;
-}
 
 .navbar {
   display: flex;
   align-items: center;
-  background-color: whitesmoke;
 }
 
 .daybox {
