--- a/views/admintools/infodata.ejs
+++ b/views/admintools/infodata.ejs
@@ -1,8 +1,9 @@
-<div class="col-md-4 col-sm-6 col-12">
+<div class="col-md-3 col-sm-6 col-xxs-12">
   <div
     class="container dashboarditems"
   >
     <p
+      class="font"
       style="
         font-family: 'Roboto', sans-serif;
         font-size: 25px;
@@ -12,6 +13,6 @@
     >
         <%=ShowData%>
     </p>
-    <h1 style="font-family: 'Tomorrow', sans-serif"><%=ShowNum%></h1>
+    <h1 class="font" style="font-family: 'Tomorrow', sans-serif"><%=ShowNum%></h1>
   </div>
 </div>
