--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,25 +1,18 @@
 <%-include("partials/header.ejs")-%>
 
-<div class="container" style="padding: 25px">
-  <div class="row">
-    <h3 class="panel-label">วันที่</h3>
-    <div class="panel panel-default daybox">
-      <div class="panel-body"><%=day%></div>
-    </div>
-  </div>
-</div>
+<%-include("partials/widget.ejs",{day: day, link: null})-%>
 
-<div
-  class="container dashboard"
->
+
+<div class="container dashboard">
   <div class="row">
-    <%-include('admintools/infodata.ejs',{ShowData: "จำนวนสมาชิกในระบบ",ShowNum: usersAmount})-%>
-    <%-include('admintools/infodata.ejs',{ShowData: "จำนวนสมาชิกที่ถูกเพิ่มวันนี้",ShowNum: '+'+currentDayAmount})-%>
-    
-  </div>
-  <div class="row">
-    <%-include('admintools/userdata.ejs',{link:'userdata',icon:'fa-table fa-8x',context:'Users Data'})-%>
+    <%-include('admintools/infodata.ejs',{ShowData: "จำนวนสมาชิกในระบบ",ShowNum:usersAmount})-%> 
+    <%-include('admintools/infodata.ejs',{ShowData:"จำนวนสมาชิกที่ถูกเพิ่มวันนี้",ShowNum: '+'+currentDayAmount})-%>
+    <%-include('admintools/infodata.ejs',{ShowData:"Temp",ShowNum: 'Temp'})-%>
+    <%-include('admintools/infodata.ejs',{ShowData:"Temp",ShowNum: 'Temp'})-%>
+    <%-include('admintools/userdata.ejs',{link:'userdata',icon:'fa-table fa-8x',context:'Users Data'})-%> 
     <%-include('admintools/userdata.ejs',{link:'tree',icon:' fa-timeline fa-8x',context:'Users Tree'})-%>
+    <%-include('admintools/userdata.ejs',{link:'',icon:'fa-bug fa-8x',context:'Temp'})-%>
+    <%-include('admintools/userdata.ejs',{link:'',icon:'fa-bug fa-8x',context:'Temp'})-%>
   </div>
 </div>
 
