--- a/views/admintools/userdata.ejs
+++ b/views/admintools/userdata.ejs
@@ -1,8 +1,8 @@
 <a href="/admin/<%=link%>" style="text-decoration: none; color: black;">
-    <div class="col-md-4 col-sm-6 col-12">
+    <div class="col-md-3 col-sm-6 col-xxs-12">
       <div class="container dashboarditems">
-        <i class="fa <%=icon%>" aria-hidden="true" style="color: #1c3f1c;"></i>
-        <h4 style="color: #1c3f1c; font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
+        <i class="fa <%=icon%> icon" aria-hidden="true"></i>
+        <h4 class="font" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
       </div>
     </div>
 </a>
