--- a/views/order.ejs
+++ b/views/order.ejs
@@ -7,18 +7,18 @@
     <table id="cart" class="table" style="background-color: white; border: 100px; border-radius: 25px;">
         <thead>
           <tr>
-            <th style="width: 30%;">GoodsId</th>
-            <th style="width: 20%;">Quantity</th>
             <th style="width: 30%;">Status</th>
-            <th style="width: 20%;">OrderId</th>
+            <th style="width: 20%;">Total</th>
+            <th style="width: 20%;">Quantity</th>
+            <th style="width: 30%;">OrderId</th>
           </tr>
         </thead>
           <%orders.forEach((element)=>{%>
           <tbody>
             <tr>
-              <td data-th="GoodsId"><%=element.goodId%></td>
-              <td  data-th="Quantity"><%=element.quantity%></td>
               <td  data-th="Status"><%=element.status%></td>
+              <td  data-th="Total"><%=element.total%></td>
+              <td  data-th="Quantity"><%=element.totalQuantity%></td>
               <td  data-th="OrderId"><a href="/order/<%=element.orderId%>" <%if(element.status!='ยังไม่ได้ส่งหลักฐานการชำระเงิน'){%>style="pointer-events: none;"<%}%>><%=element.orderId%></a></td>
 
             </tr>
