--- a/views/ordertable.ejs
+++ b/views/ordertable.ejs
@@ -29,9 +29,11 @@
         <!-- Table -->
         <table class="table table-striped table-bordered" id="Table">
           <tr>
-            <th>หลักฐานการชำระ</th>
-            <th style="width: 20%;">OrderId</th>
+            <th style="width: 10%;">หลักฐานการชำระ</th>
             <th style="width: 30%;">Status</th>
+            <th style="width: 20%;">Total</th>
+            <th style="width: 20%;">Quantity</th>
+            <th style="width: 30%;">OrderId</th>
           </tr>
           <tbody id="dataTable">
             
