--- a/views/partials/userbar.ejs
+++ b/views/partials/userbar.ejs
@@ -17,15 +17,9 @@
   ></a>
 </li>
 <li>
-  <a href="/money"
-    ><span class="badge"><%=wallet.point%></span> point
-    <span class="sr-only"></span
-  ></a>
-</li>
-<li>
   <a href="/cart">
     <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> (
-    <span class="badge"><%=wallet.total%></span> บาท )
+    <span class="badge"><%=total%></span> บาท )
     <span class="sr-only"></span
   ></a>
 </li>
