organize page file to route

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -46,7 +46,7 @@
     <tfoot>
       <tr class="visible-xs">
         <td class="text-center">
-          <strong>Total <%=wallet.total%> บาท</strong>
+          <strong>Total <%=total%> บาท</strong>
         </td>
       </tr>
       <tr>
@@ -57,7 +57,7 @@
         </td>
         <td colspan="2" class="hidden-xs"></td>
         <td class="hidden-xs text-center">
-          <strong>Total <%=wallet.total%> บาท</strong>
+          <strong>Total <%=total%> บาท</strong>
         </td>
         <td>
           <a
