--- a/views/pages/user/user.ejs
+++ b/views/pages/user/user.ejs
@@ -1,7 +1,7 @@
 
 
 
-<%-include("partials/widget.ejs",{day: day, link: 'user'})-%>
+<%-include("../partials/widget.ejs",{day: day, link: 'user'})-%>
 
 <div class="container mlmcontainer">
   <div class="row mlmrow">
