--- a/views/pages/admin/dashboard.ejs
+++ b/views/pages/admin/dashboard.ejs
@@ -1,5 +1,5 @@
 
-<%-include("partials/widget.ejs",{day: day, link: null})-%>
+<%-include("../partials/widget.ejs",{day: day, link: null})-%>
 
 
 <div class="container dashboard">
