--- a/views/pages/admin/ordertable.ejs
+++ b/views/pages/admin/ordertable.ejs
@@ -1,6 +1,6 @@
 
 
-<%-include("partials/widget.ejs",{day: day, link: 'admin'})-%>
+<%-include("../partials/widget.ejs",{day: day, link: 'admin'})-%>
 
 <div class="container">
   <input hidden id="currentPage" value="0">
@@ -28,14 +28,11 @@
         <!-- Table -->
         <table class="table table-striped table-bordered" id="Table">
           <tr>
-            <th>การแก้ไข</th>
-            <th>Username</th>
-            <th>ชื่อ-นามสกุล</th>
-            <th>ที่อยู่</th>
-            <th>ธนาคาร</th>
-            <th>เงิน</th>
-            <th>พ้อย</th>
-            
+            <th style="width: 10%;">หลักฐานการชำระ</th>
+            <th style="width: 30%;">Status</th>
+            <th style="width: 20%;">Total</th>
+            <th style="width: 20%;">Quantity</th>
+            <th style="width: 30%;">OrderId</th>
           </tr>
           <tbody id="dataTable">
             
@@ -51,16 +48,16 @@
     <div class="modal-content">
       <form method="post" id="form">
         <div class="modal-header" id="dynamic_modal_title">
-          <h5 class="modal-title">Edit Data</h5>
+          <h5 class="modal-title">ยืนยัน</h5>
         </div>
         <div class="modal-body">
-          <%-include("partials/register_form.ejs")-%>
+          <div class="receipt"></div>
         </div>
         <div class="modal-footer">
-          <input type="hidden" name="username" id="username" />
-          <input type="hidden" name="action" id="action" value="Edit" />
+          <input type="hidden" name="orderId" id="orderId" />
+          <input type="hidden" name="action" id="action" value="Confirm" />
           <button type="submit" class="btn btn-primary" id="action_button">
-            แก้ไข
+            ยืนยันการชำระเงิน
           </button>
           <button
             type="button"
@@ -77,7 +74,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="/js/datatable_script.js"></script>
+<script src="/js/order_script.js"></script>
 
 
 
