--- a/views/pages/admin/tree.ejs
+++ b/views/pages/admin/tree.ejs
@@ -1,6 +1,5 @@
-<%-include("partials/header.ejs")-%>
 
-<%-include("partials/widget.ejs",{day: day, link: 'admin'})-%>
+<%-include("../partials/widget.ejs",{day: day, link: 'admin'})-%>
 
 
 <div class="container dashboard" style="padding: 25px; margin-bottom: 25px; margin-top: 25px;">
@@ -10,4 +9,3 @@
 </div>
 
 
-<%-include("partials/footer.ejs")-%>
