--- a/views/pages/admin/admintools/userdata.ejs
+++ b/views/pages/admin/admintools/userdata.ejs
@@ -1,5 +1,5 @@
 <a href="/admin/<%=link%>" style="text-decoration: none; color: black;">
-    <div class="col-md-3 col-sm-6 col-xxs-12">
+    <div class="col-md-3 col-sm-6">
       <div class="container dashboarditems">
         <i class="fa <%=icon%> icon" aria-hidden="true"></i>
         <h4 class="font" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
