dashboard frontend tuning

--- a/views/pages/admin/admintools/infodata.ejs
+++ b/views/pages/admin/admintools/infodata.ejs
@@ -1,18 +1,17 @@
-<div class="col-md-3 col-sm-6">
+<div class="col-md-3 col-xs-6">
   <div
     class="container dashboarditems"
   >
     <p
-      class="font"
+      class="font dashboardfont"
       style="
         font-family: 'Roboto', sans-serif;
-        font-size: 25px;
         font-weight: 400;
         line-height: 30px;
       "
     >
         <%=ShowData%>
     </p>
-    <h1 class="font" style="font-family: 'Tomorrow', sans-serif"><%=ShowNum%></h1>
+    <h1 class="font" style="font-family: 'Tomorrow', sans-serif; font-size: 30px;"><%=ShowNum%></h1>
   </div>
 </div>
