--- a/views/pages/admin/admintools/userdata.ejs
+++ b/views/pages/admin/admintools/userdata.ejs
@@ -1,8 +1,8 @@
 <a href="/admin/<%=link%>" style="text-decoration: none; color: black;">
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-3 col-xs-6">
       <div class="container dashboarditems">
-        <i class="fa <%=icon%> icon" aria-hidden="true"></i>
-        <h4 class="font" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
+        <i class="fa <%=icon%> icon" style="margin: 0;" aria-hidden="true"></i>
+        <h4 class="font dashboardfont" style="font-family: 'Tomorrow', sans-serif;"><%=context%></h4>
       </div>
     </div>
 </a>
