--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ footer {
   border-radius: 25px;
   padding: 25px;
   border: 1.5px solid black;
+  overflow: auto;
 }
 
 .dashboarditems {
@@ -34,10 +35,16 @@ footer {
   padding: 25px;
   margin: auto;
   border: 1.5px solid black;
-  width: 200px;
-  height: 200px;
+  max-width: 200px;
+  max-height: 200px;
+  min-width: 120px;
+  min-height: 120px;
   text-align: center;
   margin-bottom: 25px;
+}
+
+.dashboardfont{
+  font-size: 25px;
 }
 
 .smallmlm {
@@ -121,7 +128,7 @@ footer {
 @media (max-width: 767px) {
   body {
     padding-top: 50px;
-    padding-bottom: 0px;
+    padding-bottom: 25px;
   }
 
   footer {
@@ -132,8 +139,21 @@ footer {
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom: 25px;
-  }
-  .dashboarditems {
 
+  }
+
+  .dashboardfont{
+    display: none;
+  }
+
+  .dashboarditems{
+    border-radius: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .daybox{
+    width: 150px;
+    line-height: 30px;
   }
 }
