add sweetalert and flash-express

--- a/views/pages/user/account.ejs
+++ b/views/pages/user/account.ejs
@@ -95,6 +95,7 @@
 <input id='username' hidden value="<%=userName.username%>">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
     const Child = <%-JSON.stringify(Child)%>;
