--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-
     <link rel="icon" href="/images/logo1.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta
-      name="author"
-      content="Mark Otto, Jacob Thornton, and Bootstrap contributors"
-    />
     <meta name="generator" content="Hugo 0.111.3" />
     <title>Login</title>
-
 
     <!-- bootstrap sheet -->
     <link
@@ -112,75 +105,103 @@
       <form action="/login" method="POST">
         <div class="row">
           <div clsas="col">
-            <img src="/images/logo1.png" class="img-fluid" style="margin-left: 50px; height: auto; width: 250px;">
+            <img
+              src="/images/logo1.png"
+              class="img-fluid"
+              style="margin-left: 50px; height: auto; width: 250px"
+            />
           </div>
         </div>
-        
+
         <p></p>
 
         <h1 class="h3 mb-3 fw-bold">เข้าสู่ระบบ</h1>
         <div class="form-floating">
-            <input
-              type="text"
-              name="username"
-              class="form-control top"
-              id="Username"
-              placeholder="Username"
-              maxlength="4"
-              minlength="4"
-              required
-              autofocus
-              autocomplete="off"
-            />
-            <label for="floatingInput">Username</label>
-          </div>
-          
-          <div class="form-floating">
-              <input
-                type="password"
-                name="password"
-                class="form-control bottom"
-                id="Password"
-                placeholder="Password"
-                minlength="4"
-                required
-              />
-              <label for="floatingInput">Password</label>
-            </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit" value="Submit">
+          <input
+            type="text"
+            name="username"
+            class="form-control top"
+            id="Username"
+            placeholder="Username"
+            maxlength="4"
+            minlength="4"
+            required
+            autofocus
+            autocomplete="off"
+          />
+          <label for="floatingInput">Username</label>
+        </div>
+
+        <div class="form-floating">
+          <input
+            type="password"
+            name="password"
+            class="form-control bottom"
+            id="Password"
+            placeholder="Password"
+            minlength="4"
+            required
+          />
+          <label for="floatingInput">Password</label>
+        </div>
+        <button
+          class="w-100 btn btn-lg btn-primary"
+          type="submit"
+          value="Submit"
+        >
           ล๊อกอิน
         </button>
         <p></p>
         <div class="row">
           <div class="col-12">
-            <div class="g-recaptcha" data-sitekey="6LftBNcmAAAAAF0Pb7ncvfbjkuR-pTyX8ojCRH0M"></div>
-            <input hidden name="userResponse" id="userResponse">
+            <div
+              class="g-recaptcha"
+              data-sitekey="6LftBNcmAAAAAF0Pb7ncvfbjkuR-pTyX8ojCRH0M"
+            ></div>
+            <input hidden name="userResponse" id="userResponse" />
           </div>
-          
         </div>
-          
-        <p class="mt-5 mb-3 text-body-secondary">ยังไม่มีบัญชีผู้ใช้? <a href="/register">สมัครสมาชิก!</a></p>
+
+        <p class="mt-5 mb-3 text-body-secondary">
+          ยังไม่มีบัญชีผู้ใช้? <a href="/register">สมัครสมาชิก!</a>
+        </p>
       </form>
     </main>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script>
-    $(()=>{
-      const forms = $("form");
-      // Loop over them and prevent submission
-      forms.on(
-      "submit",
-      (event) => {
-        const test = grecaptcha.getResponse()
-        if(!test){
-          event.preventDefault()
-          confirm("กรุณายืนยันตัวตน.")
+    // this is the id of the form
+
+    $(() => {
+
+      const urlParams = new URLSearchParams(window.location.search);
+      if (urlParams.get("authFailure")) {
+        Swal.fire({
+              title: 'รหัสผ่านผิดพลาด',
+              icon: "error",
+              heightAuto: false,
+            });
+      }
+
+      const form = $("form");
+      form.submit(function (e) {
+        var form = $(this);
+        var actionUrl = form.attr("action");
+
+        const test = grecaptcha.getResponse();
+        if (!test) {
+          e.preventDefault();
+          return Swal.fire({
+            title: "กรุณายืนยันตัวตน",
+            icon: "error",
+            heightAuto: false,
+          });
         }
-        $('#userResponse').val(test)
-        
-    })
-  })
+        $("#userResponse").val(test);
+      });
+    });
   </script>
-  
 </html>
