--- a/views/register.ejs
+++ b/views/register.ejs
@@ -364,6 +364,16 @@
   <script>
     $(()=> {
 
+      const urlParams = new URLSearchParams(window.location.search);
+      if (urlParams.get("authFailure")) {
+        Swal.fire({
+              title: 'สมัครสมาชิกผิดพลาด',
+              text: 'กรุณาลองใหม่',
+              icon: "error",
+              heightAuto: false,
+            });
+      }
+
       const thailand = <%-JSON.stringify(thailand)%>;
         const city=[]
         const district=[]
@@ -427,6 +437,7 @@
   </script>
 
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="/js/auth_script.js"></script>
 </html>
