--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="" />
-    <meta name="author" content="" />
     <link rel="icon" href="/images/logo1.png" />
-    <link
-      rel="canonical"
-      href="https://getbootstrap.com/docs/3.3/examples/navbar-fixed-top/"
-    />
 
     <title>ไลฟ์ก้าวหน้า</title>
 
@@ -21,33 +14,34 @@
       rel="stylesheet"
       id="bootstrap-css"
     />
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
+    <!-- tailwind -->
+    <link href="/css/output.css" rel="stylesheet" />
 
     <!-- Custom styles for this template -->
     <link href="/css/style.css" rel="stylesheet" />
 
+    <!-- js plugin -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.all.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/147e879dd5.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css"
       rel="stylesheet"
     />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="
-https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.all.min.js
-"></script>
-    <link
-      href="
-https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.min.css
-"
-      rel="stylesheet"
-    />
-
-    <!-- Favicons -->
-    <script
-      src="https://kit.fontawesome.com/147e879dd5.js"
-      crossorigin="anonymous"
-    ></script>
-
+    <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -57,6 +51,7 @@ https://cdn.jsdelivr.net/npm/sweetalert2@11.7.16/dist/sweetalert2.min.css
   </head>
 
   <body>
+    <!-- navbar -->
     <form action="/cart" method="POST">
       <div class="container">
         <nav class="navbar navbar-default navbar-fixed-top">
