--- a/views/page.ejs
+++ b/views/page.ejs
@@ -1,10 +1,11 @@
 
 <%-include("partials/header.ejs")-%>
 
+<%- include("partials/navbar.ejs") -%>
 
-
+<main class="mb-auto">
 <%-include('pages/'+page,pagerequire)-%>
-
+</main>
 
 
 
