--- a/views/pages/partials/goods.ejs
+++ b/views/pages/partials/goods.ejs
@@ -19,7 +19,7 @@
           </div>
           <div class="space-ten"></div>
           <div class="btn-ground text-center">
-              <button type="submit" class="btn btn-primary" name="selectedItem" value="<%=goodsName%>"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
+              <button type="submit" class="btn bg-blue-500 text-white" name="selectedItem" value="<%=goodsName%>"><i class="fa fa-shopping-cart"></i> Add To Cart</button>
           </div>
           <div class="space-ten"></div>
         </div>
