--- a/views/partials/bars/nonuserbar.ejs
+++ b/views/partials/bars/nonuserbar.ejs
@@ -1,6 +1,8 @@
-<li>
-    <a href="/login">Login<span class="sr-only"></span></a>
-  </li>
-  <li>
-    <a href="/register">Register<span class="sr-only"></span></a>
-  </li>
+<a
+  href="/login"
+  class="btn btn-ghost btn-sm rounded-btn">Login</a
+>
+<a
+  href="/register"
+  class="btn btn-ghost btn-sm rounded-btn">Register</a
+>
