--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,20 +1,9 @@
-
+</main>
 </body>
-<footer>
-  <div class="navbar navbar-default navbar-bottom">
-    <div class="container-fluid">
-      <div class="navbar-header" style="justify-content: center;">
-      </div>
-
-      <div id="navbar" class="navbar">
-        <ul class="nav navbar-nav">
-          <li><a href="/">Home</a></li>
-          <li><a href="/user">User</a></li>
-          <li><a href="/money">Money</a></li>
-          <li><a href="/cart">Cart</a></li>
-        </ul>
-      </div>
-    </div>
+<footer class="p-4 footer bg-base-300 text-base-content footer-center">
+  <div>
+    <p>Copyright © 2023 - All right reserved by Paul</p>
   </div>
 </footer>
+
 </html>
