--- a/views/partials/bars/adminbar.ejs
+++ b/views/partials/bars/adminbar.ejs
@@ -1,8 +1,5 @@
-<li>
-    <a href="/admin"
-      ><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Tools <span class="sr-only"></span
-    ></a>
-  </li>
-  <li>
-    <a href="/logout">Log out<span class="sr-only"></span></a>
-  </li>
+
+<a
+  href="/admin"
+  class="btn btn-ghost btn-sm rounded-btn"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> Tools</a
+>
